# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
GPUs/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
GPUs/migrations/: 0001_initial.py
rtx/: asgi.py  settings.py  urls.py  wsgi.py
